--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 
 				<div class="main2">
 				
-				<img src="images/pigs.jpg" alt="Image of pigs beside each other" width ="800;" height = "460">
+				<img src="pigs.jpg" alt="Image of pigs beside each other" width ="800;" height = "460">
 
 
 </body>
