--- a/image.html
+++ b/image.html
@@ -25,15 +25,15 @@
 		
 		<div class="main1">
 			
-			<img src="images/farm_walk.jpg" alt="farmer guiding people image" width ="370;" height = "270">
-		    <img src="images/cow.jpg" alt="image of a cow" width ="420;" height = "270">
-			<img src="images/tractor.jpg" alt="image of a green tractor" width ="370;" height = "230">
-			<img src="images/shop.jpg" alt="image inside the farm shop" width ="420;" height = "230">
+			<img src="farm_walk.jpg" alt="farmer guiding people image" width ="370;" height = "270">
+		    <img src="cow.jpg" alt="image of a cow" width ="420;" height = "270">
+			<img src="tractor.jpg" alt="image of a green tractor" width ="370;" height = "230">
+			<img src="shop.jpg" alt="image inside the farm shop" width ="420;" height = "230">
 			</div>
 		
 				<div class="main2">
 		
-		<img src="images/cow_eating.jpg" alt="image a cow eating grass" width ="370;" height = "230">
-		<img src="images/feeding_goat.jpg" alt="image of a goat getting fed " width ="420;" height = "220">
-		<img src="images/walk.jpg" alt="image of a walking path" width ="370;" height = "230">
-		<img src="images/sheep.jpg" alt="image of sheep beside a wall " width ="420;" height = "220">
+		<img src="cow_eating.jpg" alt="image a cow eating grass" width ="370;" height = "230">
+		<img src="feeding_goat.jpg" alt="image of a goat getting fed " width ="420;" height = "220">
+		<img src="walk.jpg" alt="image of a walking path" width ="370;" height = "230">
+		<img src="sheep.jpg" alt="image of sheep beside a wall " width ="420;" height = "220">
