--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Sunshine Farm Contact </title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="style.CSS">
 	</head>
 	<body>
 	
