--- a/visitor.html
+++ b/visitor.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Sunshine Farm Visitor Info</title>
-		<link rel="stylesheet" type="text/css" href="styles/style.css">
+		<link rel="stylesheet" type="text/css" href="style.CSS">
 	</head>
 	<body>
 	
